--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "Aero";
-    src: url('../../../Resources/Fonts/AERO_03.ttf');
+    font-family: "Roboto-Condensed";
+    src: url('../../../Resources/Fonts/RobotoCondensed-VariableFont_wght.ttf');
 }
 
 * {
@@ -10,6 +10,8 @@
 html, body {
     padding: 0;
     margin: 0;
+    font-weight: 625;
+    font-family: "Roboto-Condensed";
 }
 
 #content {
@@ -117,10 +119,9 @@ html, body {
 
 .statNumber {
     color: #f8f8f8;
-    font-family: "Aero";
-    font-size: 20px;
+    font-size: 22px;
+    font-weight: 700;
     text-shadow: 0px 0px 5px black;
-    margin-top: 4px;
 }
 
 
@@ -132,8 +133,8 @@ html, body {
     top: 358px;
     left: 52px;
     width: 373px;
-    font-family: "Aero";
-    font-size: 20px;
+    font-size: 19px;
+    font-weight: 500;
     color: white;
     text-shadow: 0px 0px 5px black;
     display: flex;
@@ -211,7 +212,8 @@ html, body {
     height: 24px;
     display: flex;
     align-items: center;
-    padding: 5px;
+    padding: 5px 7px;
+    font-size: 18px;
 }
 #vsWildAbilityH {
     border: 1px solid #5d4d68;
@@ -224,6 +226,7 @@ html, body {
     width: 100%;
     padding: 0px 50px 10px 50px;
     font-size: 18px;
+    font-weight: 600;
 }
   
 .vsWildStat {
@@ -309,7 +312,6 @@ html, body {
     justify-content: center;
     align-items: center;
     gap: 15px;
-    font-family: "Aero";
     color: #f8f8f8;
 }
 
@@ -368,7 +370,7 @@ html, body {
         }
     }
     .pokeTexts {
-        transform: translateY(10px);
+        transform: translateY(8px);
     }
 }
 
@@ -403,7 +405,9 @@ html, body {
     display: flex;
     gap: 3px;
     background-color: var(--activeColor);
-    padding: 6px 0px 0px 5px;
+    padding: 2px 0px 2px 5px;
+    align-items: center;
+    font-size: 16px;
 }
 .pokeLvlAfter {
     background-color: var(--activeColor);
@@ -413,14 +417,17 @@ html, body {
 
 
 .pokeNick {
-    font-size: 32px;
+    font-size: 30px;
 }
 
 .pokeSubText {
     display: flex;
     gap: 6px;
     font-size: 22px;
-    font-style: italic;
+    font-weight: 550;
+    font-style: oblique 15deg;
+    padding-left: 5px;
+    margin-top: -3px;
 }
 
 
@@ -442,7 +449,7 @@ html, body {
     justify-content: center;
     width: 55px;
     background-color: var(--bacColor);
-    padding: 5px 0px 1px 5px;
+    padding: 2px 0px 1px 5px;
     z-index: 2;
     flex-shrink: 0;
     text-wrap: nowrap;
@@ -507,7 +514,6 @@ html, body {
     width: 100%;
     height: 181px;
     bottom: 3px;
-    font-family: "Aero";
     color: #f8f8f8;
 }
 
@@ -601,7 +607,7 @@ html, body {
     gap: 5px;
     border-bottom: 4px double var(--activeColor);
     border-right: 4px double var(--activeColor);
-    padding: 6px 12px 0px 12px;
+    padding: 0px 12px 0px 12px;
     border-radius: 0% 0% 12% / 100% 0%;
     background-color: #00000030;
 }
@@ -609,14 +615,16 @@ html, body {
     display: flex;
     gap: 3px;
     filter: drop-shadow(0px 0px 2px black);
-    padding-right: 2px;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 3px 2px 2px 0px;
 }
 
 .activeTypeIcon {
     width: 20px;
     height: 20px;
-    margin-top: -7px;
     filter: drop-shadow(0px 0px 2px black);
+    margin-top: -2px;
     transform: scale(1.25);
 }
 
@@ -633,14 +641,16 @@ html, body {
 }
 .activeSubText {
     display: flex;
-    gap: 4px;
+    gap: 6px;
     font-size: 20px;
     align-items: center;
+    margin: -2px 0 0 5px;
+    font-weight: 600;
 }
 
 .activeItemDiv {
     display: flex;
-    gap: 4px;
+    gap: 6px;
     align-items: center;
 }
 .activeItemImgDiv {
@@ -694,12 +704,13 @@ html, body {
     justify-content: center;
     width: 55px;
     background-color: var(--bacColor);
-    padding: 5px 0px 1px 0px;
+    padding: 2px 0px 2px 0px;
     z-index: 2;
     flex-shrink: 0;
     text-wrap: nowrap;
     color: #b6b6b6;
     font-size: 16px;
+    font-weight: 700;
 }
 
 /** Active Moves */
@@ -714,7 +725,7 @@ html, body {
 .activeMoveDiv {
     width: 100%;
     border: 1px solid lightgray;
-    padding: 2px 10px;
+    padding: 1px 10px;
     border-radius: 10% / 100% 100% 100% 100%;
 }
 .activeMoveTexts {
@@ -738,8 +749,7 @@ html, body {
 }
 
 .activeMoveName {
-    transform: translateY(1px);
-    font-size: 20px;
+    font-size: 19px;
     text-wrap: nowrap;
     white-space: nowrap;
     max-width: 100%;
@@ -748,8 +758,7 @@ html, body {
 .activeMoveRight {
     display: flex;
     gap: 2px;
-    transform: translateY(1px);
-    font-size: 19px;
+    font-size: 18px;
 }
 .activeMoveHidePP {
     display: none;
@@ -782,7 +791,6 @@ html, body {
 
     height: 100%;
     width: 200px;
-    /* overflow: hidden; */
     display: flex;
     align-items: center;
     gap: 2px;
@@ -817,7 +825,9 @@ html, body {
 
 .standbyName {
     font-size: 22px;
+    font-weight: 500;
     text-shadow: 0px 0px 5px black;
+    text-wrap: nowrap;
 }
 
 .standbyHpDiv {
@@ -828,6 +838,7 @@ html, body {
     border-radius: 10px;
     overflow: hidden;
     filter: drop-shadow(0px 0px 2px black);
+    translate: 0px -2px;
 }
 
 
@@ -842,7 +853,6 @@ html, body {
     justify-content: center;
     align-items: center;
     filter: drop-shadow(0px 0px 3px black);
-    font-family: "Aero";
     color: #f8f8f8;
     animation: trainerIntroFull 3.5s both;
 }
@@ -862,13 +872,15 @@ html, body {
 }
 #enemyNameIntroTitle {
     font-size: 56px;
-    -webkit-text-stroke: 1px rgb(129, 54, 54);
+    font-weight: 500;
+    -webkit-text-stroke: 3px rgb(129, 54, 54);
+    paint-order: stroke fill;
     margin: 0px 10px;
 }
 #enemyNameIntroName {
     font-size: 64px;
-    font-weight: bold;
-    -webkit-text-stroke: 2px rgb(122, 30, 30);
+    -webkit-text-stroke: 4px rgb(122, 30, 30);
+    paint-order: stroke fill;
 }
 
 .enemyNameIntroBar {
@@ -897,9 +909,7 @@ html, body {
 #enemyNameIntroEqual {
     margin-right: 8px;
 }
-#enemyNameIntroPokeCount {
-    transform: translateY(2px);
-}
+
 
 /** Other */
 
@@ -917,7 +927,6 @@ html, body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: "Aero";
     font-size: 28px;
     color: lightcoral;
     text-shadow: 0px 0px 5px black;
