Hide poke lvl in overlay when set to 0

--- a/Stream Tool/Overlays/Black and White/Resources/PBW2.css
+++ b/Stream Tool/Overlays/Black and White/Resources/PBW2.css
@@ -374,6 +374,11 @@ html, body {
     gap: 4px;
     font-size: 19px;
 }
+.hidePokeLvlDiv {
+    .pokeLvlDiv {
+        display: none;
+    }
+}
 
 .typeIcon {
     height: 26px;
