--- a/Stream Tool/Overlays/Omega Ruby and Alpha Sapphire/Resources/ORAS.css
+++ b/Stream Tool/Overlays/Omega Ruby and Alpha Sapphire/Resources/ORAS.css
@@ -407,6 +407,14 @@ html, body {
 .pokeLvlDiv {
     display: flex;
 }
+.hidePokeLvlDiv {
+    .pokeLvlDiv {
+        display: none;
+    }
+    .pokeTexts {
+        transform: translateY(0px);
+    }
+}
 
 .pokeLvlBefore {
     background-color: var(--activeColor);
