--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -402,6 +402,14 @@ html, body {
 .pokeLvlDiv {
     display: flex;
 }
+.hidePokeLvlDiv {
+    .pokeLvlDiv {
+        display: none;
+    }
+    .pokeTexts {
+        transform: translateY(0px);
+    }
+}
 
 .pokeLvlBefore {
     background-color: var(--activeColor);
