--- a/Stream Tool/Overlays/Omega Ruby and Alpha Sapphire/Resources/ORAS.css
+++ b/Stream Tool/Overlays/Omega Ruby and Alpha Sapphire/Resources/ORAS.css
@@ -99,8 +99,6 @@ html, body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin: 10px 0px 5px 0px;
-
 }
 
 .stat {
@@ -111,6 +109,7 @@ html, body {
     border-radius: 20px;
     background-color: rgb(71, 71, 71);
     padding: 2px 10px 2px 10px;
+    margin-top: 5px;
 }
 
 .statIcon {
