--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -827,6 +827,11 @@ button:hover {
   filter: opacity(.7) !important;
 }
 
+#autoHelpButt {
+  margin-left: -5px;
+  filter: opacity(.7) !important;
+}
+
 
 /* hidden stuff only applies to enemy trainer tab */
 .hiddenElement {
@@ -1336,7 +1341,12 @@ button:hover {
 }
 .confModalDesc {
   text-align: justify;
-  max-width: 550px;
+  max-width: 600px;
+  overflow-y: auto;
+  padding: 10px 12px;
+  border: 2px solid var(--bg5);
+  border-radius: 5px;
+  background-color: var(--bg2);
 }
 
 
