Check if there's a new Dex update

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -42,6 +42,10 @@ input[type=number] {
   appearance: textfield;
   margin: 0; 
 }
+a {
+  color: var(--selected);
+  text-decoration: none;
+} 
 
 html, body {
   padding: 0;
